--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit
+streamlit_dynamic_filters==0.1.3
 streamlit-aggrid==0.3.3
 pandas==1.5.0
 python-pptx~=0.6.21
@@ -11,3 +12,4 @@ kaleido
 openai
 snowflake-connector-python
 langchain
+
