--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 streamlit_dynamic_filters==0.1.3
 streamlit-aggrid==0.3.3
-pandas==1.5.0
+pandas
 python-pptx~=0.6.21
 openpyxl
 Pillow==9.3.0
