--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit>= 1.28
 streamlit_dynamic_filters==0.1.3
 streamlit-aggrid
 pandas
@@ -12,4 +12,6 @@ kaleido
 openai
 snowflake-connector-python
 langchain
+snowflake-snowpark-python
+pyarrow==10.0.1
 
