--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ kaleido
 openai
 snowflake-connector-python
 langchain
+langchain-community
+langchain-core
 snowflake-snowpark-python
 pyarrow==10.0.1
 
